--- a/프로그래밍과제2/프로그래밍과제2.vcxproj
+++ b/프로그래밍과제2/프로그래밍과제2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{31a3ce31-bde5-4d56-9cc9-5284215dd128}</ProjectGuid>
-    <RootNamespace>프로그래밍</RootNamespace>
+    <ProjectGuid>{d252eb07-1da4-421e-a042-4bb426c9aecb}</ProjectGuid>
+    <RootNamespace>프로그래밍과제2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,13 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="과제-1.cpp" />
-    <ClCompile Include="수업3.cpp" />
-    <ClCompile Include="수업2.cpp" />
-    <ClCompile Include="수업.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="과제-1.h" />
+    <ClInclude Include="homewe가.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
